--- a/135-Merge-Datasets.ipynb
+++ b/135-Merge-Datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -149,35 +149,35 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Alabama</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>F</td>\n",
        "      <td>22.9</td>\n",
        "      <td>2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Alaska</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>F</td>\n",
        "      <td>24.5</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Arizona</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>F</td>\n",
        "      <td>15.7</td>\n",
        "      <td>18.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Arkansas</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>F</td>\n",
        "      <td>20.2</td>\n",
        "      <td>7.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>California</td>\n",
-       "      <td>12.0</td>\n",
+       "      <td>A</td>\n",
        "      <td>7.8</td>\n",
        "      <td>44.0</td>\n",
        "    </tr>\n",
@@ -186,12 +186,12 @@
        "</div>"
       ],
       "text/plain": [
-       "        State  Giffords Gun Safety Score  Gun Deaths per 100k People (2018)  \\\n",
-       "0     Alabama                        1.0                               22.9   \n",
-       "1      Alaska                        1.0                               24.5   \n",
-       "2     Arizona                        1.0                               15.7   \n",
-       "3    Arkansas                        1.0                               20.2   \n",
-       "4  California                       12.0                                7.8   \n",
+       "        State Giffords Gun Safety Score  Gun Deaths per 100k People (2018)  \\\n",
+       "0     Alabama                         F                               22.9   \n",
+       "1      Alaska                         F                               24.5   \n",
+       "2     Arizona                         F                               15.7   \n",
+       "3    Arkansas                         F                               20.2   \n",
+       "4  California                         A                                7.8   \n",
        "\n",
        "   Gun Death Rate (Ranked High to Low)  \n",
        "0                                  2.0  \n",
@@ -201,28 +201,28 @@
        "4                                 44.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Giffords pre-processing: Convert grades (A-F) to numbers (12-1) and rename column\n",
-    "grades = {\n",
-    "        'A': 12,\n",
-    "        'A-': 11,\n",
-    "        'B+': 10,\n",
-    "        'B': 9,\n",
-    "        'B-': 8,\n",
-    "        'C+': 7,\n",
-    "        'C': 6,\n",
-    "        'C-': 5,\n",
-    "        'D+': 4,\n",
-    "        'D': 3,\n",
-    "        'D-': 2,\n",
-    "        'F': 1,\n",
-    "}\n",
-    "gun_safety['Giffords_Gun_Safety_Grade'] = gun_safety['Giffords_Gun_Safety_Grade'].map(grades)\n",
+    "# grades = {\n",
+    "#         'A': 12,\n",
+    "#         'A-': 11,\n",
+    "#         'B+': 10,\n",
+    "#         'B': 9,\n",
+    "#         'B-': 8,\n",
+    "#         'C+': 7,\n",
+    "#         'C': 6,\n",
+    "#         'C-': 5,\n",
+    "#         'D+': 4,\n",
+    "#         'D': 3,\n",
+    "#         'D-': 2,\n",
+    "#         'F': 1,\n",
+    "# }\n",
+    "# gun_safety['Giffords_Gun_Safety_Grade'] = gun_safety['Giffords_Gun_Safety_Grade'].map(grades)\n",
     "gun_safety.rename(columns={'Giffords_Gun_Safety_Grade':'Giffords Gun Safety Score', \n",
     "                          'Gun_Death_Rate_2018 (per 100k people)': 'Gun Deaths per 100k People (2018)',\n",
     "                          'Gun_Death_Rank': 'Gun Death Rate (Ranked High to Low)'}, inplace=True)\n",
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "4               2      0      2"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
        "4                2       2"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +729,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
